--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
 	  <div id="root">
 	  	<div id="header">
 		  	<label>Sort by:</label>
-		  	<select id="dynamic_select" onchange="location.reload()">
-			    <option value="https://api.themoviedb.org/3/movie/popular?api_key=ddb907d69f1671fabdfd75c40b664a37&language=en-US&page=1" selected>Now Playing</option>
-			    <option value="https://api.themoviedb.org/3/movie/now_playing?api_key=ddb907d69f1671fabdfd75c40b664a37&language=en-US&page=1">Popular</option>
+		  	<select id="select" onchange="location.reload()">
+			    <option value="https://api.themoviedb.org/3/movie/now_playing?api_key=ddb907d69f1671fabdfd75c40b664a37&language=en-US&page=1" selected>Now Playing</option>
+			    <option value="https://api.themoviedb.org/3/movie/popular?api_key=ddb907d69f1671fabdfd75c40b664a37&language=en-US&page=1">Popular</option>
 			    <option value="https://api.themoviedb.org/3/movie/top_rated?api_key=ddb907d69f1671fabdfd75c40b664a37&language=en-US&page=1">Top Rated</option>
 			    <option value="https://api.themoviedb.org/3/movie/upcoming?api_key=ddb907d69f1671fabdfd75c40b664a37&language=en-US&page=3">Upcoming</option>
 			</select>
 		</div>
 	  </div>
+
+
 
 	  <script src="scripts.js"></script>
 	</body>
