--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype hmtl>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -11,7 +11,7 @@
 	
   	<link href="style.css" rel="stylesheet">
 
-  	
+
 
 </head>
 
@@ -20,7 +20,7 @@
 	  <div id="root">
 	  	<div id="header">
 		  	<label>Sort by:</label>
-		  	<select id="select" onchange="location.reload()">
+		  	<select id="select" onchange="location.reload();">
 			    <option value="https://api.themoviedb.org/3/movie/now_playing?api_key=ddb907d69f1671fabdfd75c40b664a37&language=en-US&page=1" selected>Now Playing</option>
 			    <option value="https://api.themoviedb.org/3/movie/popular?api_key=ddb907d69f1671fabdfd75c40b664a37&language=en-US&page=1">Popular</option>
 			    <option value="https://api.themoviedb.org/3/movie/top_rated?api_key=ddb907d69f1671fabdfd75c40b664a37&language=en-US&page=1">Top Rated</option>
@@ -29,8 +29,7 @@
 		</div>
 	  </div>
 
-
-
+	  
 	  <script src="scripts.js"></script>
 	</body>
 
